created swagger for cartitems route
